@@ -1,0 +1,20 @@
+#include "CoreFoundation/CFString.h"
+#include "CoreFoundation/CFDate.h"
+#include "CoreFoundation/CFCalendar.h"
+#include "Testing.h"
+#include "../CFTesting.h"
+
+int main (void)
+{
+  CFCalendarRef cal;
+  CFAbsoluteTime at = 0.0;
+  
+  cal = CFCalendarCreateWithIdentifier (NULL, kCFGregorianCalendar);
+  PASS(CFCalendarComposeAbsoluteTime(cal, &at, "yMd", 2011, 7, 8),
+    "Absolute time composed.");
+  printf ("%f", at);
+  PASS(at == 2291090400.0, "Absolute time composed correctly.");
+  CFRelease (cal);
+  
+  return 0;
+}
