@@ -6,8 +6,8 @@ int main (void)
 {
   CFMutableStringRef str1;
   CFMutableStringRef str2;
-  CFStringRef constant1 = __CFStringMakeConstantString("Test string.");
-  CFStringRef constant2 = __CFStringMakeConstantString("   test  ");
+  CFStringRef constant1 = CFSTR("Test string.");
+  CFStringRef constant2 = CFSTR("   test  ");
   
   str1 = CFStringCreateMutable (NULL, 0);
   CFStringReplaceAll (str1, constant1);
@@ -16,13 +16,13 @@ int main (void)
   str2 = CFStringCreateMutableCopy (NULL, CFStringGetLength(str1), str1);
   
   CFStringUppercase (str2, NULL);
-  PASS_CFEQ(str2, __CFStringMakeConstantString("TEST STRING."), "Uppercase mapping works.");
+  PASS_CFEQ(str2, CFSTR("TEST STRING."), "Uppercase mapping works.");
   
   CFStringCapitalize (str2, NULL);
-  PASS_CFEQ(str2, __CFStringMakeConstantString("Test String."), "Capitalize mapping works.");
+  PASS_CFEQ(str2, CFSTR("Test String."), "Capitalize mapping works.");
   
   CFStringLowercase (str2, NULL);
-  PASS_CFEQ(str2, __CFStringMakeConstantString("test string."), "Lowercase mapping works");
+  PASS_CFEQ(str2, CFSTR("test string."), "Lowercase mapping works");
   
   CFStringReplace (str2, CFRangeMake(0, CFStringGetLength(str1)), constant1);
   PASS_CFEQ(str2, constant1, "String is replaced whole.");
@@ -33,22 +33,20 @@ int main (void)
   str1 = CFStringCreateMutable (NULL, 0);
   CFStringReplaceAll (str1, constant2);
   CFStringTrimWhitespace (str1);
-  PASS_CFEQ(str1, __CFStringMakeConstantString("test"),
-    "String is trimmed correctly.");
+  PASS_CFEQ(str1, CFSTR("test"), "String is trimmed correctly.");
   
   CFStringReplace (str1, CFRangeMake(1, 2), constant1);
-  PASS_CFEQ(str1, __CFStringMakeConstantString("tTest string.t"),
-    "String replacement works");
+  PASS_CFEQ(str1, CFSTR("tTest string.t"), "String replacement works");
   
   CFRelease (str1);
   
   str1 = CFStringCreateMutable (NULL, 0);
-  CFStringReplaceAll (str1, __CFStringMakeConstantString("abcdef"));
-  str2 = __CFStringMakeConstantString("123");
+  CFStringReplaceAll (str1, CFSTR("abcdef"));
+  str2 = CFSTR("123");
   CFStringPad (str1, str2, 9, 1);
-  PASS_CFEQ(str1, __CFStringMakeConstantString("abcdef231"), "Padding works.");
+  PASS_CFEQ(str1, CFSTR("abcdef231"), "Padding works.");
   CFStringPad (str1, NULL, 3, 0);
-  PASS_CFEQ(str1, __CFStringMakeConstantString("abc"), "Truncating works.");
+  PASS_CFEQ(str1, CFSTR("abc"), "Truncating works.");
   CFRelease (str1);
   
   return 0;
